# vocalize

./: Cargo.toml
.github/workflows/: packaging.yml
docs/: CNAME
src/: lib.rs  main.rs
